--- a/src/app/pages/home1/home1.component.html
+++ b/src/app/pages/home1/home1.component.html
@@ -1,7 +1,6 @@
 <!-- home1.component.html -->
 <div class="container">
-  <h1>Welcome to Home1</h1>
-  <p>This is the content of Home1 page.</p>
+  <h1>Welcome 🌵</h1>
   <div class="game-container" (click)="screenClick()">
     <div *ngIf="!started" class="game-text">
       click to start
