--- a/src/app/pages/home2/home2.component.html
+++ b/src/app/pages/home2/home2.component.html
@@ -1,7 +1,7 @@
 
 <!-- home2.component.html -->
 <div class="container">
-  <h1>Theremin</h1>
+  <h1>Theremin📻</h1>
   <h3>Finger controlled theremin</h3>
 
   <p>Coming soon (or later) - https://github.com/emanueledil/ThereminPyHands</p>
