--- a/src/app/pages/home2/home2.component.html
+++ b/src/app/pages/home2/home2.component.html
@@ -5,4 +5,7 @@
   <h3>Finger controlled theremin</h3>
 
   <p>Coming soon (or later) - https://github.com/emanueledil/ThereminPyHands</p>
+  <video #video autoplay></video>
+  <canvas #canvas></canvas>
+
 </div>
