face detection to remove

--- a/src/app/pages/home2/home2.component.html
+++ b/src/app/pages/home2/home2.component.html
@@ -7,5 +7,7 @@
   <p>Coming soon (or later) - https://github.com/emanueledil/ThereminPyHands</p>
   <video #video autoplay></video>
   <canvas #canvas></canvas>
+  <button (mousedown)="play(440)" (mouseup)="stop()">Play A4</button>
+  <button (mousedown)="play(494)" (mouseup)="stop()">Play B4</button>
 
 </div>
