--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   </button>
   <mat-menu #menu="matMenu">
     <button (click)="navigateTo('home1')" mat-menu-item>Jump cactus</button>
-    <button (click)="navigateTo('home2')" mat-menu-item>Theremin</button>
+    <button (click)="navigateTo('home2')" mat-menu-item>Webcam Theremin</button>
   </mat-menu>
   <span>EMA🌱</span>
   <span class="spacer"></span>
