--- a/src/app/pages/home2/home2.component.html
+++ b/src/app/pages/home2/home2.component.html
@@ -2,9 +2,16 @@
 <!-- home2.component.html -->
 <div class="container">
   <h1>Theremin📻</h1>
-  <h3>Finger controlled theremin</h3>
+  <h3>Hand controlled theremin</h3>
 
-  <p>Coming soon (or later) - https://github.com/emanueledil/ThereminPyHands</p>
+  <p>Access the webcam and control the sound with one open hand 🖐:</p>
+  <p>The video is not recorded.</p>
+  <ul>
+    <li>Move to the right to increase pitch</li>
+    <li>Move to up to increase volume</li>
+    <li>Close the hand to stop the sound</li>
+  </ul>
+
   <video #video autoplay></video>
   <canvas #canvas></canvas>
 
