--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,11 @@
     <mat-icon>menu</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
-    <button (click)="navigateTo('home1')" mat-menu-item>Jump cactus 🌵</button>
+    <!-- <button (click)="navigateTo('home1')" mat-menu-item>Jump cactus 🌵</button> -->
     <button (click)="navigateTo('home2')" mat-menu-item>Webcam Theremin 📻 (webcam access)</button>
     <button (click)="navigateTo('home3')" mat-menu-item>House distance 🗺</button>
   </mat-menu>
-  <span>EMA🌱</span>
+  <span>EMANUELE WEBSITE (under costruction...)</span>
   <span class="spacer"></span>
 </mat-toolbar>
 
