--- a/src/app/pages/home2/home2.component.html
+++ b/src/app/pages/home2/home2.component.html
@@ -1,9 +1,10 @@
+<div class="main-container">
 <div class="container">
   <h1>Theremin📻</h1>
   <h3>Hand controlled theremin</h3>
 
   <p>Access the webcam and control the sound with one open hand 🖐:</p>
-  <p>The video is not recorded.</p>
+  <p>Webcam access is required to work, it may take few seconds. The video is not recorded.</p>
   <ul>
     <li>Move to the right to increase pitch</li>
     <li>Move to up to increase volume</li>
@@ -13,4 +14,5 @@
   <video #video autoplay></video>
   <canvas #canvas></canvas>
 
+</div>
 </div>
