--- a/src/app/pages/home3/home3.component.html
+++ b/src/app/pages/home3/home3.component.html
@@ -2,7 +2,6 @@
   <h1>House distance 🗺</h1>
   <h3>Color map of distances</h3>
 
-  <p>Coming soon (or later)</p>
-  <p>The video is not recorded.</p>
+  <p>Page under construction... Coming soon (or later)</p>
 
 </div>
