--- a/src/app/pages/home2/home2.component.css
+++ b/src/app/pages/home2/home2.component.css
@@ -4,6 +4,12 @@
   padding: 20px;
 }
 
+.main-container{
+  background: linear-gradient(45deg, #2B2B2B, #007ACC);
+  color:white;
+
+}
+
 h1 {
   font-size: 24px;
   margin-bottom: 10px;
@@ -13,3 +19,4 @@ p {
   font-size: 18px;
   line-height: 1.5;
 }
+
