--- a/src/app/pages/home2/home2.component.html
+++ b/src/app/pages/home2/home2.component.html
@@ -3,12 +3,12 @@
   <h1>Theremin📻</h1>
   <h3>Hand controlled theremin</h3>
 
-  <p>Access the webcam and control the sound with one open hand 🖐:</p>
+  <p>Access the webcam and control the sound with <b>ONLY ONE</b> open hand 🖐:</p>
   <p>Webcam access is required to work, it may take few seconds. The video is not recorded.</p>
   <ul>
-    <li>Move to the right to increase pitch</li>
-    <li>Move to up to increase volume</li>
-    <li>Close the hand to stop the sound</li>
+    <li>Move your hand to the right to increase pitch</li>
+    <li>Move your hand up to increase the volume.</li>
+    <li>Close your hand to stop the sound</li>
   </ul>
 
   <video #video autoplay></video>
